force-app/main/default/objects/Order/fields/I_RM_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Affiliation</description>
    <label>Affiliation</label>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>