force-app/main/default/objects/Order/fields/I_ST_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Data_Source__c</fullName>
    <description>Used to track the data source of the data in system.</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>