force-app/main/default/objects/Order/fields/I_ST_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Email__c</fullName>
    <description>Added for LTU360-223 to capture the Email provided in Publication (Collateral request) forms.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>