force-app/main/default/objects/Order/fields/I_ST_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to decide we we need to send the auto response for the order.</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>