force-app/main/default/objects/Order/fields/I_ST_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_First_Name__c</fullName>
    <description>Added for LTU360-223 to capture the First Name provided in Publication (Collateral request) forms by School Representative.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>