force-app/main/default/objects/Order/fields/I_ST_Full_School_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Full_School_Name__c</fullName>
    <description>Added for LTU360-223 to capture the School provided  in Publication (Collateral request) forms by School Representative.</description>
    <label>School Or Educational Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>