force-app/main/default/objects/Order/fields/I_ST_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Last_Name__c</fullName>
    <description>Added for LTU360-223 to capture the  Last Name provided in Publication (Collateral request) forms  by School Representative.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>