force-app/main/default/objects/Order/fields/I_ST_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Mobile_Phone__c</fullName>
    <description>Added for LTU360-223 to capture the Mobile Phone provided in Publication (Collateral request) forms.
Help Text</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>