force-app/main/default/objects/Order/fields/I_ST_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Office_Phone__c</fullName>
    <description>Added for LTU360-223 to capture the Office Phone provided in Publication (Collateral request) forms  by School Representative.
Help Text</description>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>