force-app/main/default/objects/Order/recordTypes/I_ST_Guide_Orders.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Guide_Orders</fullName>
    <active>true</active>
    <description>Orders created from Publication (Collateral request) forms by School Representative</description>
    <label>Guide Orders</label>
</RecordType>