force-app/main/default/objects/Order/listViews/Guide_Orders.listView-meta.xml
<ListView>
    <fullName>Guide_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDER.CUSTOMER_AUTHORIZED_BY</columns>
    <columns>I_ST_First_Name__c</columns>
    <columns>I_ST_Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.I_ST_Guide_Orders</value>
    </filters>
    <label>Guide Orders</label>
    <sharedTo>
        <role>I_ST_SACE_Consultant</role>
        <role>I_ST_SACE_Manager</role>
        <role>I_ST_SACE_Team_Lead</role>
    </sharedTo>
</ListView>